--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,20 @@
         "JADE_COLLAB_BASE_DIR": "${env:USERPROFILE}\\jade\\data"
       },
       "justMyCode": true
-    }
+    },
+    {
+      "name": "JADE - Streamlit App",
+      "type": "python",
+      "request": "launch",
+      "module": "streamlit",
+      "args": [
+        "run",
+        "jade_gui/jade_gui.py"
+      ],
+      "jinja": true,
+      "justMyCode": true,
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal"
+    },
   ]
 }
